ci/triggers/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-tekton-pipeline-webhook
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: sampleapp-webhook.example.com
    http:
      paths:
      - backend:
          service:
            # there is an additional el- prefix for the existing service name:
            # kubectl get el <EVENTLISTENR_NAME> -o=jsonpath='{.status.configuration.generatedName}{"\n"}'
            # so the result service name will look like 'el-' + '<service-name-here>'
            name: el-sampleapp-pipeline-listener
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sampleapp-webhook.example.com
    secretName: sampleapp-tekton-webhook-tls
